--- a/tubes/pubspec.yaml
+++ b/tubes/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   google_sign_in: ^6.2.1
+  iconsax_flutter: ^1.0.0
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
